--- a/WebFundamentals/HTML/javascript_basic_blocks.css
+++ b/WebFundamentals/HTML/javascript_basic_blocks.css
@@ -1,43 +1,86 @@
-
-#wrapper{
-  background-color: darkblue;
-  width: 910px;
-  height: 875px;
-  padding: 10px;
+.container{
+    width: 970px;
+    background-color: #1d355c;
+    padding: 10px;
 }
 
-#header{
-  background-color: red;
-  width: 900px;
-  height: 75px;
-  border-radius: 10px;
+a{
+    color: #61cac7;
+    font-size: 12px;
 }
 
-#nav{
-  background-color: DarkTurquoise;
-  width: 150px;
-  height: 300px;
-  margin-top: 15px;
-  vertical-align:top;
-  border-radius: 10px;
-  display: inline-block;
+p{
+    color: #c4d8ec;
+    font-size: 12px;
 }
 
-#content {
-    background-color: black;
-    width: 730px;
-    height: 700px;
-    margin-top: 15px;
-    margin-left: 15px;
+.header{
+    width: 100%;
+    /*height: 100px;*/
+    background-color: #cc323b;
     border-radius: 10px;
-    display: inline-block;
-  }
+    margin-bottom: 10px;
+}
 
-  #footer {
-      background-color: gray;
-      width: 900px;
-      height: 50px;
-      margin-top: 15px;
-      border-radius: 10px;
-      display: inline-block;
-    }
+.header h1{
+    margin: 0;
+    padding: 15px 0 15px 10px;
+    color: #c3d6eb;
+}
+
+.navbar{
+    width: 180px;
+    background-color: #2f7d8b;
+    border-radius: 10px;
+    padding: 10px;
+    display: inline-block;
+    vertical-align: top;
+}
+
+ul{
+    color: white;
+    padding-left: 20px;
+    margin: 0;
+}
+
+.main-content{
+    width: 720px;
+    display: inline-block;
+    margin-left: 15px;
+    background-color: #0f1822;
+    border-radius: 10px;
+    color: #c4d8ec;
+    padding: 15px;
+}
+
+.main-content h2{
+    margin: 10px 0;
+}
+
+.main-content ul li p{
+    margin: 5px 0;
+}
+
+span{
+    color: #6d80ce;
+}
+
+.footer{
+    margin-top: 10px;
+    width: 100%;
+    background-color: #5e6672;
+    border-radius: 15px;
+}
+
+.footer p{
+    padding: 15px 0 15px 15px;
+}
+Files
+
+javascript_basic_blocks.zip September 08, 2017  
+  No file chosen UPLOAD
+ or 
+
+Add Github Url
+SAVE
+Privacy Policy
